project-3-cloudshop-multi-tier/Backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: cloudshop-prod
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 80
    targetPort: 80
